--- a/src/Components/Button/Button.module.css
+++ b/src/Components/Button/Button.module.css
@@ -4,6 +4,8 @@
 .Button {
   padding: 8px 16px;
   margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
   border-radius: 2px;
   background-color: #3f51b5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
