--- a/src/Components/IconButton/IconButton.module.css
+++ b/src/Components/IconButton/IconButton.module.css
@@ -3,15 +3,13 @@
   margin-left: auto;
   padding: 0px;
   border: none;
-
+  border-radius: 50%;
   font: inherit;
   cursor: pointer;
   background-color: #ccc;
-
   display: flex;
   align-items: center;
   justify-content: center;
-
   width: 50px;
   height: 50px;
 }
