--- a/src/Components/ImageGallery/ImageGallery.module.css
+++ b/src/Components/ImageGallery/ImageGallery.module.css
@@ -3,8 +3,8 @@
  */
 .ImageGallery {
   display: grid;
-  min-width: calc(100vw - 48px);
-  grid-template-columns: repeat(auto-fill, minmax(320px, 4fr));
+  max-width: calc(100vw - 48px);
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   grid-gap: 16px;
   margin-top: 0;
   margin-bottom: 0;
